<resources>
    <string name="app_name">BlogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="SignUpText">Not have an account? Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
</resources>